--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ project(ams)
 set (ams_VERSION_MAJOR 1)
 set (ams_VERSION_MINOR 0)
 
+#
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++14")
 
 # Requirements
 
